--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,30 +8,31 @@
         <h2><%= t('.title') %></h2>
         <div class="courses">
           <% @courses.each do |course| %>
+            <div class='course'>
+              <h3><%= link_to course.name, course_path(course) %></h3>
+              <div class="course-by">
+                por Florentino Perez - <%= course.reference %>
+              </div>
+              <p><%= truncate(course.description, :length => 200) %></p>
 
-            <h3><%= link_to course.name, course_path(course) %></h3>
-            <div class="course-by">
-              por Florentino Perez - <%= course.reference %>
+              <p style="color:red;">
+              <% enrollment = current_user.enrollments.where(:course_id => course).first %>
+              <% if !enrollment %>
+                <%= link_to t(".request_join"), course_requests_path(course), :method => :post %>
+
+              <% elsif enrollment.pending? %>
+                <em><%= t('.join_requested') %></em>
+
+              <% elsif enrollment.rejected? %>
+                <em><%= t('.join_rejected') %></em>
+                <%= link_to t(".request_join_again"), join_course_path(course), :method => :post %>
+
+              <% elsif enrollment.accepted? %>
+                <em><%= t('.join_accepted') %></em>
+
+              <% end %>
+              </p>
             </div>
-            <p><%= truncate(course.description, :length => 200) %></p>
-
-            <p style="color:red;">
-            <% enrollment = current_user.enrollments.where(:course_id => course).first %>
-            <% if !enrollment %>
-              <%= link_to t(".request_join"), join_course_path(course), :method => :post %>
-
-            <% elsif enrollment.pending? %>
-              <em><%= t('.join_requested') %></em>
-
-            <% elsif enrollment.rejected? %>
-              <em><%= t('.join_rejected') %></em>
-              <%= link_to t(".request_join_again"), join_course_path(course), :method => :post %>
-
-            <% elsif enrollment.accepted? %>
-              <em><%= t('.join_accepted') %></em>
-
-            <% end %>
-            </p>
           <% end %>
         </div>
       </div>
