CourseAsset renamed to Asset, relation with course is polymorphic

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,1 +1,8 @@
 <h1><%= Assignment.model_name.human %> <%= @assignment.name %></h1>
+
+<%= @assignment.course.name %>
+<%= @assignment.name %>
+<%= @assignment.description %>
+<%= @assignment.value %>
+<%= @assignment.period %>
+<%= l @assignment.due_to, :format => :short %>
