--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -33,7 +33,7 @@
         <%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %>
 
         
-        <% unless @course.course_assets.empty? %>
+        <% unless @course.assets.empty? %>
           <table class="zebra-striped" data-sortable="true">
             <thead>
               <tr>
@@ -44,7 +44,7 @@
               </tr>
             </thead>
             <tbody>
-              <% @course.course_assets.each do |asset| %>
+              <% @course.assets.each do |asset| %>
                 <tr class='asset'>
                   <td><%= asset.file.url.match(/\.(\w+)$/)[1] %></td>
                   <td><%= link_to asset.name, asset.file.url %></td>
