Finished Como alumno/maestro puedo ver mis cursos en el dashboard

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2321,7 +2321,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   background-color: #46a546;
 }
 .label.notice {
-  background-color: #62cffc;
+  background-color: #00afc9;
 }
 .media-grid {
   margin-left: -20px;
