--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -3,11 +3,13 @@
 <%= semantic_form_for [@course, @assignment] do |form| %>
   <%= form.inputs :basic do %>
     <%= form.input :name %>
-    <%= form.input :description %>
+    <%= form.input :description, :input_html => {'data-editor' => true} %>
     <%= form.input :value %>
     <%= form.input :period %>
     <%= form.input :due_to %>
   <% end %>
+
+  <%= render :partial => 'shared/assets_fields', :locals => {:form => form} %>
 
   <%= form.buttons do %>
     <%= form.commit_button :button_html => {:id => :submit} %>
