--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,14 @@
 <%= semantic_form_for @user do |form| %>
 
+  <%= form.inputs :file do %>
+    <li class='preview'>
+      <img src="<%= @user.avatar_file.thumb.url %>"/>
+    </li>
+    <%= form.input :avatar_file, :as => :file, :input_html => {'data-upload-path' => upload_avatar_for_users_path} %>
+    <%= form.input :avatar_file_cache, :as => :hidden %>
+  <% end %>
+
+
   <%= form.inputs do %>
     <%= form.input :first_name %>
     <%= form.input :last_name %>
