--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,11 @@
   <div class="content">
     <div class="row">
       <div class="span3">
+
+        <% unless @user.avatar_file.blank? %>
+          <%= image_tag @user.avatar_file.small.url %>
+        <% end %>
+
         profile partial goes here (or something like that)
       </div>
 
