teacher can edit assignment, student can view listing and detail

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -6,3 +6,6 @@
 <%= @assignment.value %>
 <%= @assignment.period %>
 <%= l @assignment.due_to, :format => :short %>
+
+
+<%= render :partial => 'shared/assets_table', :locals => {:record => @assignment} %>
