--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Assignments#index</h1>
-<p>Find me in app/views/assignments/index.html.erb</p>
+<h1><%= Assignment.model_name.human(:count => :many) %></h1>
+
+<ul id="assignments">
+  <% @assignments.each do |assignment| %>
+    <li>
+      <%= assignment.course.name %>
+      <%= link_to assignment.name, assignment %>
+      <%= assignment.value %>
+      <%= assignment.period %>
+      <%= l assignment.due_to, :format => :short %>
+    </li>
+  <% end %>
+</ul>
