--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,6 @@
+<%= link_to Assignment.model_name.human(:count => :many), course_assignments_path(@course) %>
+
+
 <div class="container">
   <div class="content">
     <div class="row">
@@ -32,28 +35,8 @@
         <! create assignment link !>
         <%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %>
 
-        
         <% unless @course.assets.empty? %>
-          <table class="zebra-striped" data-sortable="true">
-            <thead>
-              <tr>
-                <th class="blue"><%= CourseAsset.human_attribute_name :type %></th>
-                <th class="blue"><%= CourseAsset.human_attribute_name :name %></th>
-                <th class="blue"><%= CourseAsset.human_attribute_name :description %></th>
-                <th class="blue"><%= CourseAsset.human_attribute_name :created_at %></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @course.assets.each do |asset| %>
-                <tr class='asset'>
-                  <td><%= asset.file.url.match(/\.(\w+)$/)[1] %></td>
-                  <td><%= link_to asset.name, asset.file.url %></td>
-                  <td><%= asset.description %></td>
-                  <td><%= l asset.created_at, :format => :short %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
+          <%= render :partial => 'shared/assets_table', :locals => {:record => @course} %>
         <% else %>
           <p>No hay archivos del curso.</p>
         <% end %>
