--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="content">
     <div class="row">
-      <span class="span16">
+      <div class="span16">
         <ul class="breadcrumb">
           <li>Dashboard</li>
         </ul>  
