--- a/app/views/courses/_members_menu.html.erb
+++ b/app/views/courses/_members_menu.html.erb
@@ -2,7 +2,7 @@
   <ul class="left-nav-main-ul">
     <li><%= link_to(t('courses.menu.members'), members_course_path, :class => "miembros") %></li>
   </ul>
-  <div class="total-members">20 <%= t('courses.menu.members')%></div>
+  <div class="total-members"><%= course_members %></div>
   <ul class="nav-member-avatars">
     <li><%= link_to(image_tag('al.png'), "#") %></li>
     <li><%= link_to(image_tag('al.png'), "#") %></li>
