--- a/app/views/courses/members.html.erb
+++ b/app/views/courses/members.html.erb
@@ -1,5 +1,17 @@
 <div class="container">
   <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
+          <li class="active">Miembros del Curso</li>
+        </ul>  
+      </div>
+    </div>
+    
     <div class="row">
       <div class="span3">
         <%= render :partial => "course_menu" %>
