--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -15,9 +15,9 @@
           <div class="span3">
             <h2><%= t('courses.my_courses') %></h2>
           </div>
-          <div class="span2">
+          <div class="span2 padding-top">
             <% if current_user.teacher? %>
-              <%= link_to("+ " + t('courses.create_course'), new_course_path, :class => "btn small right") %>
+              <%= link_to("+ " + t('courses.create_course'), new_course_path, :class => "btn small") %>
             <% end %>
           </div>
         </div>
