--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,8 @@
     <div class="row">
       <div class="span16">
         <ul class="breadcrumb">
-          <li><a href="#">Dashboard</a> <span class="divider">/</span></li>
-          <li><a href="#">Profiles</a> <span class="divider">/</span></li>
-          <li class="active"><%= current_user.first_name %></li>
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li class="active"><%= current_user.first_name %> <%= current_user.last_name %></li>
         </ul>  
       </div>
     </div>
@@ -24,7 +23,7 @@
         <div class="row">
           <div class="span4">
             <h2><%= @user %></h2>
-            <p class="description"><%= @user.role %></p>
+            <p class="description"><%= @user.role.capitalize %></p>
           </div>
           <div class="span5" style="margin-left:30px;">
             <% if @user == current_user %>
@@ -35,27 +34,27 @@
         <div class="section-divider"></div>
 
         <div class="row bottom-margin">
-          <div class="span2 text-right description"><%= t('.about_me') %>:</div>
+          <div class="span2 text-right description"><%= t('profile.about_me') %>:</div>
           <div class="span7"><%= @user.about_me %></div>
         </div>
 
         <div class="row bottom-margin">
-          <div class="span2 text-right description"><%= t('.studies') %>:</div>
+          <div class="span2 text-right description"><%= t('profile.studies') %>:</div>
           <div class="span7"><%= @user.studies %></div>
         </div>
 
         <div class="row bottom-margin">
-          <div class="span2 text-right description"><%= t('.birth_date') %>:</div>
+          <div class="span2 text-right description"><%= t('profile.birth_date') %>:</div>
           <div class="span7"><% if @user.birth_date %><%= l @user.birth_date, :format => :medium %><% end %></div>
         </div>
 
         <div class="row bottom-margin">
-          <div class="span2 text-right description"><%= t('.occupation') %>:</div>
+          <div class="span2 text-right description"><%= t('profile.occupation') %>:</div>
           <div class="span7"><%= @user.occupation %></div>
         </div>
 
         <div class="row bottom-margin">
-          <div class="span2 text-right description"><%= t('.social_networks') %>:</div>
+          <div class="span2 text-right description"><%= t('profile.social_networks') %>:</div>
           <div class="span7">
             <p><%= link_to("@#{@user.twitter_link}", "http://twitter.com/#{@user.twitter_link}") %></p>
             <p><%= @user.facebook_link %></p>
