--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Assignments#edit</h1>
-<p>Find me in app/views/assignments/edit.html.erb</p>
+<h1><%= t('.new_assignature') %></h1>
+<%= render :partial => 'form' %>
