--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,7 @@
 <%= link_to Assignment.model_name.human(:count => :many), course_assignments_path(@course) %>
-
+<! create assignment link !>
+<%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %>
+<%= link_to t('.edit_course'), new_course_assignment_path(@course), :id => 'new_assignment' %>
 
 <div class="container">
   <div class="content">
@@ -31,15 +33,8 @@
         </div>
         
         <div class="section-divider"><h3><%= t('courses.archives') %></h3></div>
+        <%= render :partial => 'shared/assets_table', :locals => {:record => @course} %>
 
-        <! create assignment link !>
-        <%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %>
-
-        <% unless @course.assets.empty? %>
-          <%= render :partial => 'shared/assets_table', :locals => {:record => @course} %>
-        <% else %>
-          <p>No hay archivos del curso.</p>
-        <% end %>
       </div>
       <div class="span3" style="margin:0;">
         <%= render :partial => "shared/adds" %>
