--- a/app/assets/javascripts/lib/wysiwyg/stylesheets/jquery.wysiwyg.css
+++ b/app/assets/javascripts/lib/wysiwyg/stylesheets/jquery.wysiwyg.css
@@ -1,4 +1,4 @@
-div.wysiwyg { border: 1px solid #999; padding: 5px; background: #fff url('../images/jquery.wysiwyg.bg.png') repeat-x top; }
+div.wysiwyg { padding: 5px; background: #fff }
 div.wysiwyg * { margin: 0; padding: 0; }
 
 div.wysiwyg ul.toolbar li.jwysiwyg-custom-command { overflow: hidden; }
