--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -31,8 +31,8 @@
                 <div class="span6"><h3><%= link_to course.name, course_path(course) %></h3></div>
                 <div class="span4" style="margin-top: 5px;">
                 <% if current_user.manageable_courses.include? course %>
-                <span class="label notice course-notification"><%= link_to(t('courses.edit'), edit_course_path(course)) %></span> 
-                <span class="label important course-notification"><%= link_to(t('courses.delete'), course_path(course), :confirm => t('confirm_delete'), :method => :delete) %></span>
+                <span class="label-tag notice course-notification"><%= link_to(t('courses.edit'), edit_course_path(course)) %></span> 
+                <span class="label-tag important course-notification"><%= link_to(t('courses.delete'), course_path(course), :confirm => t('confirm_delete'), :method => :delete) %></span>
                 <% end %>
                 </div>
               </div>
