--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,8 +1,19 @@
 <div class="container">
   <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path)%> <span class="divider">/</span></li>
+          <li><%= t('courses.create_course')%></li>
+        </ul>  
+      </div>
+    </div>
+    
     <div class="row">
       <div class="span3">
-        <%= render :partial => "course_menu" %>
+        
       </div>
       <div class="span10">
         <h1>Crear Curso Nuevo</h1>
