--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
       <div class="span10">
         <div class="row">
           <div class="span4">
-            <h2><%= @user %></h2>
+            <h2><%= @user.name %></h2>
             <p class="description"><%= @user.role.capitalize %></p>
           </div>
           <div class="span5" style="margin-left:30px;">
