--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -6,12 +6,12 @@
   <% end %>
 
   <%= form.inputs do %>
-    <%= form.input :name, :input_html => {:class => "xlarge"}  %>
-    <!--<%= form.input :description, :input_html => {'data-editor' => true, :class => 'xlarge'} %>-->
-    <%= form.input :description, :input_html => {:class => "xlarge"} %>
-    <%= form.input :start_date, :as => :string, :input_html => {:placeholder => "dd/mmm/yy", :class => 'xlarge ui-date-picker'} %>
-    <%= form.input :finish_date, :as => :string, :input_html => {:placeholder => "dd/mmm/yy", :class => 'xlarge ui-date-picker'} %>
-    <%= form.input :reference, :input_html => {:class => "xlarge"} %>
+    <%= form.input :name, :input_html => {:class => "span6"}  %>
+    <!--<%= form.input :description, :input_html => {'data-editor' => true, :class => 'span6'} %>-->
+    <%= form.input :description, :input_html => {:class => "span6"} %>
+    <%= form.input :start_date, :as => :string, :input_html => {:placeholder => "dd/mmm/yy", :class => 'span6 datepicker'} %>
+    <%= form.input :finish_date, :as => :string, :input_html => {:placeholder => "dd/mmm/yy", :class => 'span6 datepicker'} %>
+    <%= form.input :reference, :input_html => {:class => "span6"} %>
     <%= form.input :public %>
   <% end %>
 
