--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,22 +10,25 @@
 
 
   <%= form.inputs do %>
-    <%= form.input :first_name %>
-    <%= form.input :last_name %>
-    <%= form.input :about_me %>
-    <%= form.input :studies %>
-    <%= form.input :birth_date %>
-    <%= form.input :occupation %>
+    <%= form.input :first_name, :input_html => {:class => "span6"} %>
+    <%= form.input :last_name, :input_html => {:class => "span6"} %>
+    <%= form.input :about_me, :input_html => {:class => "span6"} %>
+    <%= form.input :studies, :input_html => {:class => "span6", :rows => 5} %>
+    <%= form.input :birth_date, :as => :string, :input_html => {:placeholder => "dd/mmm/yy", :class => 'span6 datepicker'} %>
+    <%= form.input :occupation, :input_html => {:class => "span6", :rows => 5} %>
   <% end %>
-
-  <%= form.inputs 'Redes sociales' do %>
-    <%= form.input :twitter_link, :label => 'http://twitter.com/' %>
-    <%= form.input :facebook_link, :label => 'https://www.facebook.com/' %>
-    <%= form.input :linkedin_link, :label => 'LinkedIn' %>
+    
+    <div class="social-media"><h4><%= t('profile.social_networks') %></h4></div>
+  <%= form.inputs do %>
+    <div class="input-prepend social-media">
+      <span class="add-on">@</span><%= form.input :twitter_link, :label => false, :input_html => {:placeholder => "Twitter", :class => "span5-5"} %>
+      <span class="add-on">fb</span><%= form.input :facebook_link, :label => false, :input_html => {:placeholder => "Facebook", :class => "span5-5"} %>
+      <span class="add-on">li</span><%= form.input :linkedin_link, :label => false, :input_html => {:placeholder => "LinkedIn", :class => "span5-5"} %>
+    </div>
   <% end %>
 
   <%= form.buttons do %>
-    <%= form.commit_button :button_html => {:id => :submit} %>
+    <%= form.commit_button :button_html => {:id => :submit, :class => "btn"} %>
   <% end %>
 
 <% end %>
