--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,19 +1,29 @@
 <div class="container">
   <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(current_user.name, user_path(@user))%> <span class="divider">/</span></li>
+          <li><%= t('profile.edit_profile')%></li>
+        </ul>  
+      </div>
+    </div>
+    
     <div class="row">
       <div class="span3">
        
       </div>
 
       <div class="span10">
-        <h1>Editar Perfil</h1>
+        <h1><%= t('profile.edit_profile')%></h1>
         <%= render :partial => 'form' %>
       </div>
 
       <div class="span3" style="margin:0;">
         
       </div>
-
     </div>
   </div>
   <%= render :partial => "shared/footer" %>
