--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -10,11 +10,11 @@
     <ul class="left-nav-main-ul">
       <li><%= link_to Assignment.model_name.human(:count => :many), course_assignments_path(@course), :class => "tareas" %></li>
       <li><%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %></li>
-      <li><%= link_to(t('courses.menu.updates'), "#", :class => "actualizaciones") %></li>
-      <li><%= link_to(t('courses.menu.discus'), "#", :class => "discusiones" ) %></li>
-      <li><%= link_to(t('courses.menu.docs'), "#", :class => "documentos") %></li>
-      <li><%= link_to(t('courses.menu.evaluations'), "#", :class => "evaluaciones") %></li>
-      <li><%= link_to(t('courses.menu.calendar'), "#", :class => "calendario") %></li>-->
+      <li><%= link_to(t('.wall'), wall_for_course(@course), :class => "actualizaciones") %></li>
+      <li><%= link_to(t('.discus'), "#", :class => "discusiones" ) %></li>
+      <li><%= link_to(t('.docs'), "#", :class => "documentos") %></li>
+      <li><%= link_to(t('.evaluations'), "#", :class => "evaluaciones") %></li>
+      <li><%= link_to(t('.calendar'), "#", :class => "calendario") %></li>-->
     </ul>
   </div>
 <% else %>
