--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -10,7 +10,7 @@
     <ul class="left-nav-main-ul">
       <li><%= link_to Assignment.model_name.human(:count => :many), course_assignments_path(@course), :class => "tareas" %></li>
       <li><%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %></li>
-      <li><%= link_to(t('.wall'), wall_for_course(@course), :class => "actualizaciones") %></li>
+      <li><%= link_to(t('.wall'), wall_for_course_path(@course), :class => "actualizaciones") %></li>
       <li><%= link_to(t('.discus'), "#", :class => "discusiones" ) %></li>
       <li><%= link_to(t('.docs'), "#", :class => "documentos") %></li>
       <li><%= link_to(t('.evaluations'), "#", :class => "evaluaciones") %></li>
@@ -20,8 +20,8 @@
 <% else %>
   <div class="underline">
     <ul class="left-nav-main-ul">
-      <li><%= link_to(t('courses.menu.my_courses'), "#") %></li>
-      <li><%= link_to(t('courses.menu.new_course'), new_course_path) %></li>
+      <li><%= link_to(t('.my_courses'), "#") %></li>
+      <li><%= link_to(t('.new_course'), new_course_path) %></li>
     </ul>
   </div>
 <% end %>
