Fixes some UI errors

--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -1,5 +1,4 @@
 <% if params[:id] %>
-
   <% unless @course.logo_file.blank? %>
     <div class="underline">
       <%= image_tag @course.logo_file.small.url %>
@@ -11,7 +10,7 @@
       <li><%= link_to Assignment.model_name.human(:count => :many), course_assignments_path(@course), :class => "tareas" %></li>
       <li><%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %></li>
       <li><%= link_to(t('.wall'), wall_for_course_path(@course), :class => "actualizaciones") %></li>
-      <li><%= link_to(t('.discus'), "#", :class => "discusiones" ) %></li>
+      <!--<li><%= link_to(t('.discus'), "#", :class => "discusiones" ) %></li>
       <li><%= link_to(t('.docs'), "#", :class => "documentos") %></li>
       <li><%= link_to(t('.evaluations'), "#", :class => "evaluaciones") %></li>
       <li><%= link_to(t('.calendar'), "#", :class => "calendario") %></li>-->
