basic discussion actions

--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -10,7 +10,8 @@
       <li><%= link_to Assignment.model_name.human(:count => :many), course_assignments_path(@course), :class => "tareas" %></li>
       <li><%= link_to t('.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment' %></li>
       <li><%= link_to(t('.wall'), wall_for_course_path(@course), :class => "actualizaciones") %></li>
-      <!--<li><%= link_to(t('.discus'), "#", :class => "discusiones" ) %></li>
+      <li><%= link_to(t('.new_discussion'), new_course_discussion_path(@course)) %></li>
+      <li><%= link_to(t('.discussions'), course_discussions_path(@course), :class => "discusiones" ) %></li>
       <li><%= link_to(t('.docs'), "#", :class => "documentos") %></li>
       <li><%= link_to(t('.evaluations'), "#", :class => "evaluaciones") %></li>
       <li><%= link_to(t('.calendar'), "#", :class => "calendario") %></li>-->
