--- a/app/views/supervisors/show.html.erb
+++ b/app/views/supervisors/show.html.erb
@@ -7,4 +7,5 @@
   <li><%= link_to t('.courses'), courses_supervisor_path %></li>
   <li><%= link_to t('.teachers'), teachers_supervisor_path %></li>
   <li><%= link_to t('.students'), students_supervisor_path %></li>
+  <li><%= link_to t('.pending_approvals'), pending_approvals_supervisor_path %></li>
 </ul>
